Changes for 1.1alpha11:

 - better modulatisation of code (Alexei)
 - added src/zabbix_server/escalator.[ch] (Alexei)
 - nodata() will be calculated regardless of its previous value (Alexei)
 - simplified code for trigger status updated (Alexei)
 - better read loop in active.c (Alexei)
 - added parameter DisableActive for zabbix_agentd (Alexei)
 - trigger expressions may contain spaces (Alexei)
 - improvements for snprintf.c (Alexei)
 - added table escalation_rules (Alexei)
 - fixed parameter of strncpy() in active.c (Alexei)
 - added column screens_items.rowspan (Alexei)
 - support of rowspan in screens (Alexei)
 - fixed selection of host in Event History (Alexei)
 - fixed short php tags in PHP frontend (Alexei)

Changes for 1.1alpha10:

 - improved monitoring of log files (Alexei)
 - removed all pthread code (Alexei)
 - added column items.lastlogsize (Alexei)
 - added column screens_items.colspan (Alexei)
 - support of colspan in screens (Alexei)
 - added column media.period (Alexei)
 - activity period for medias (Alexei)
 - updated startup scripts for SuSE 9.2 and 9.3. Thanks to Andre. (Alexei) 
 - added selection of hosts for event history (Alexei)
 - new item type - 'log' (Alexei)
 - added table 'history_log' (Alexei)
 - fixed issue with high agent's CPU usage for active checks (Alexei)
 - minor modifications of DB schema. Unnecessary indexes dropped. (Alexei)

Changes for 1.1alpha9:

 - changed copyright to SIA Zabbix (Alexei)
 - added basic support for log[*] (Alexei)
 - fixed processing of traps having character ':' (Alexei)
 - added logfiles.h and logfiles.c (Alexei)
 - group level start/stop monitoring (Alexei)
 - fixed read loop in active.c. (Alexei)
 - better readability of php code (Alexei)
 - support of file[*] (Alexei)
 - improved history.php (Alexei)
 - delete items from linked hosts when using checkboxes (Alexei)
 - changed definition of services.goodsla to double(5.2) (Alexei)
 - minor fix for users.php (Alexei)