@@ -4,6 +4,7 @@ mkdir bin
 aclocal
 autoconf
 autoheader
+automake -a
 automake
 ./configure --with-mysql
 make
