@@ -1,0 +1,2 @@
+bin_PROGRAMS = zabbix_sender
+bin_SOURCES = zabbix_sender.c
