@@ -1,0 +1,2 @@
+bin_PROGRAMS = zabbix_server
+bin_SOURCES = alerter.c pinger.c housekeeper.c checks_simple.c checks_snmp.c checks_agent.c checks_internal.c trapper.c escalator.c expression.c actions.c
